--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,30 +1,38 @@
-.header {
-  margin-top: 60px;
+/* Reset some default styles */
+body, h1, p {
+    margin: 0;
+    padding: 0;
+    font-family: 'Lora', serif;
 }
 
-.headerTitles {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: "Lora", serif;
-  color: #444;
+/* Style the header section */
+.parallax-header {
+    background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8fA%3D%3D&w=1000&q=80'); /* Replace with your image path */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 70vh; /* Adjust to your desired height */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff; /* Text color */
+    text-align: center;
 }
 
-.headerTitleSm {
-  position: absolute;
-  top: 18%;
-  font-size: 20px;
+.header-content {
+    padding: 30px;
+    border: rgb(10, 6, 6);
+    border-style: solid;
 }
 
-.headerTitleLg {
-  position: absolute;
-  top: 20%;
-  font-size: 100px;
+.header-content h1 {
+    font-size: 100px;
+    margin-bottom: 10px;
+
 }
 
-.headerImg {
-  width: 100%;
-  height: 450px;
-  margin-top: 80px;
-  object-fit: cover;
+.header-content p {
+    font-size: 30px;
+    color: #2b2828;
 }
